--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist-${{ matrix.runs-on }}
-          path: dist/
+          path: dist/**
   
   release:
     name: Publish to PyPI
